@@ -1,5 +1,9 @@
 2006-06-22  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>
 
+	PR c++/28110
+	* pt.c (unify) <case TEMPLATE_PARM_INDEX>: Check for invalid
+	parameters.
+
 	PR c++/28109
 	* rtti.c (get_tinfo_decl_dynamic): Robustify.
 
